[package]
name = "gccjit-derive"
version = "0.1.0"
authors = ["aprokurov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gccjit_derive"
proc-macro = true

[dependencies]
syn = {version = "0.15",features = ["derive"]}
proc-macro2 = "0.4"
quote = "0.6"
synstructure = "0.10"